Basic structure for forum view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.b1ackr0se.vsociety" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +17,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.ForumActivity"
+            android:label="@string/title_activity_forum"
+            android:parentActivityName=".activity.MainActivity"
+            android:theme="@style/BlueAndPink">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="io.b1ackr0se.vsociety.activity.MainActivity" />
         </activity>
     </application>
 
