--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.android.support:palette-v7:23.0.0'
+    compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     compile 'com.afollestad:material-dialogs:0.7.9.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
