--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/BlueAndPink" >
+        android:theme="@style/BlueAndAmber" >
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
@@ -22,7 +22,7 @@
             android:name=".activity.ForumActivity"
             android:label="@string/title_activity_forum"
             android:parentActivityName=".activity.MainActivity"
-            android:theme="@style/BlueAndPink">
+            android:theme="@style/BlueAndAmberNoTranslucent">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="io.b1ackr0se.vsociety.activity.MainActivity" />
